[package]
name = "minigrep"
version = "0.1.0"
author = ["Onesimus <anonsmd@163.com>"]
description = "A fun program"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3